objects/order__c.object
<CustomObject>
    <label>order</label>
    <nameField>
        <displayFormat>O-{000000}</displayFormat>
        <label>order number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Total__c</fullName>
        <inlineHelpText>OrderAmount</inlineHelpText>
        <label>Total</label>
        <summarizedField>Order_Line_Item__c.Total__c</summarizedField>
        <summaryForeignKey>Order_Line_Item__c.order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>Status of the Order Record</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Open,</fullName>
                </value>
                <value>
                    <fullName>In Process,</fullName>
                </value>
                <value>
                    <fullName>Dispatched,</fullName>
                </value>
                <value>
                    <fullName>Shipped,</fullName>
                </value>
                <value>
                    <fullName>Out for Delivery,</fullName>
                </value>
                <value>
                    <fullName>Delivered,</fullName>
                </value>
                <value>
                    <fullName>Closed,</fullName>
                </value>
                <value>
                    <fullName>Return Requested,</fullName>
                </value>
                <value>
                    <fullName>Returned,</fullName>
                </value>
                <value>
                    <fullName>Cancelle</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The customer
record under which order is
created</inlineHelpText>
        <label>Customer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>orders</relationshipLabel>
        <relationshipName>orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderDate__c</fullName>
        <inlineHelpText>Order date</inlineHelpText>
        <label>Order Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AccountName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Parent Account
related to
customer</inlineHelpText>
        <label>Account Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>order</relationshipLabel>
        <relationshipName>orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Items__c</fullName>
        <inlineHelpText>order Quantity</inlineHelpText>
        <label>Total Items</label>
        <summarizedField>Order_Line_Item__c.Quantity__c</summarizedField>
        <summaryForeignKey>Order_Line_Item__c.order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ExpectedDate__c</fullName>
        <inlineHelpText>The expected
delivery date
of the order</inlineHelpText>
        <label>Expected Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DeliveredDate__c</fullName>
        <inlineHelpText>The date which the
order has
been delivered</inlineHelpText>
        <label>Delivered Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BillingAddress__c</fullName>
        <inlineHelpText>Billing Address
of the Order</inlineHelpText>
        <label>Billing Address</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <description>type of payment</description>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Net Banking,</fullName>
                </value>
                <value>
                    <fullName>Credit Card,</fullName>
                </value>
                <value>
                    <fullName>Debit Card,</fullName>
                </value>
                <value>
                    <fullName>EMI,</fullName>
                </value>
                <value>
                    <fullName>Wallet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Status__c</fullName>
        <description>Status of the Payment for
the order</description>
        <inlineHelpText>Status of the Payment for
the order</inlineHelpText>
        <label>Payment Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PAID,</fullName>
                </value>
                <value>
                    <fullName>COD,</fullName>
                </value>
                <value>
                    <fullName>Partially Paid,</fullName>
                </value>
                <value>
                    <fullName>EMI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ShippingAddress__c</fullName>
        <inlineHelpText>Shipping Address of the Order</inlineHelpText>
        <label>Shipping Address</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>